<?xml version="1.0" encoding="UTF-8"?>
<project xmlns="http://maven.apache.org/POM/4.0.0" xmlns:xsi="http://www.w3.org/2001/XMLSchema-instance" xsi:schemaLocation="http://maven.apache.org/POM/4.0.0 http://maven.apache.org/maven-v4_0_0.xsd">

	<modelVersion>4.0.0</modelVersion>
	<groupId>com.cloudera</groupId>
	<artifactId>cloudera-framework</artifactId>
	<packaging>pom</packaging>
	<version>1.2.2-cdh5.4.7</version>

	<prerequisites>
		<maven>3.3</maven>
	</prerequisites>

	<scm>
		<connection>scm:git:git@github.com:ggear/cloudera-framework.git</connection>
		<url>scm:git:git@github.com:ggear/cloudera-framework.git</url>
		<developerConnection>scm:git:git@github.com:ggear/cloudera-framework.git</developerConnection>
		<tag>cloudera-framework-1.2.2-cdh5.4.7</tag>
	</scm>

	<distributionManagement>
		<site>
			<url>scm:git:git@github.com:ggear/cloudera-framework.git</url>
		</site>
	</distributionManagement>

	<repositories>
		<repository>
			<id>cdh.repo</id>
			<url>https://repository.cloudera.com/content/groups/cloudera-repos</url>
			<name>Cloudera Repository</name>
			<snapshots>
				<enabled>false</enabled>
			</snapshots>
		</repository>
		<repository>
			<id>central.repo</id>
			<url>https://repo1.maven.org/maven2</url>
			<name>Central Repository</name>
			<snapshots>
				<enabled>false</enabled>
			</snapshots>
		</repository>
	</repositories>

	<properties>

		<maven.test.skip>false</maven.test.skip>
		<maven.archetype-test.skip>false</maven.archetype-test.skip>
		<maven.system-test.skip>true</maven.system-test.skip>
		<maven.integration-test.skip>true</maven.integration-test.skip>
		<maven.data-download.skip>true</maven.data-download.skip>
		<maven.assembly.skip>false</maven.assembly.skip>

		<hadoop.version>2.6.0-cdh5.4.7</hadoop.version>
		<hadoop-hive.version>1.1.0-cdh5.4.7</hadoop-hive.version>
		<hadoop-flume.version>1.5.0-cdh5.4.7</hadoop-flume.version>
		<hadoop-avro.version>1.7.6-cdh5.4.7</hadoop-avro.version>
		<hadoop-parquet.version>1.5.0-cdh5.4.7</hadoop-parquet.version>
		<hadoop-zookeeper.version>3.4.5-cdh5.4.7</hadoop-zookeeper.version>
		<hadoop-kafka.version>0.8.2.0-kafka-1.3.2</hadoop-kafka.version>
		<hadoop-elephantbird.version>4.9</hadoop-elephantbird.version>

		<slf4j.version>1.7.5</slf4j.version>
		<sysout-over-slf4j.version>1.0.2</sysout-over-slf4j.version>
		<junit.version>4.12</junit.version>

		<java.version>1.7</java.version>

		<project.runtime.heap.max>1024</project.runtime.heap.max>
		<project.runtime.perm.heap.max>256</project.runtime.perm.heap.max>
		<project.build.sourceEncoding>UTF-8</project.build.sourceEncoding>

	</properties>

	<profiles>
		<profile>
			<id>CMP</id>
			<properties>
				<maven.test.skip>true</maven.test.skip>
				<maven.archetype-test.skip>true</maven.archetype-test.skip>
				<maven.system-test.skip>true</maven.system-test.skip>
				<maven.data-download.skip>true</maven.data-download.skip>
				<maven.assembly.skip>true</maven.assembly.skip>
			</properties>
		</profile>
		<profile>
			<id>BLD</id>
			<properties>
				<maven.test.skip>false</maven.test.skip>
				<maven.archetype-test.skip>false</maven.archetype-test.skip>
				<maven.system-test.skip>true</maven.system-test.skip>
				<maven.data-download.skip>true</maven.data-download.skip>
				<maven.assembly.skip>true</maven.assembly.skip>
			</properties>
		</profile>
		<profile>
			<id>PKG</id>
			<properties>
				<maven.test.skip>true</maven.test.skip>
				<maven.archetype-test.skip>true</maven.archetype-test.skip>
				<maven.system-test.skip>true</maven.system-test.skip>
				<maven.data-download.skip>true</maven.data-download.skip>
				<maven.assembly.skip>false</maven.assembly.skip>
			</properties>
		</profile>
		<profile>
			<id>ALL</id>
			<properties>
				<maven.test.skip>false</maven.test.skip>
				<maven.archetype-test.skip>false</maven.archetype-test.skip>
				<maven.system-test.skip>false</maven.system-test.skip>
				<maven.data-download.skip>false</maven.data-download.skip>
				<maven.assembly.skip>false</maven.assembly.skip>
			</properties>
		</profile>
	</profiles>

	<modules>
		<module>cloudera-framework-repo</module>
		<module>cloudera-framework-main</module>
	</modules>

	<build>
		<pluginManagement>
			<plugins>
				<plugin>
					<groupId>org.apache.maven.plugins</groupId>
					<artifactId>maven-antrun-plugin</artifactId>
					<version>1.8</version>
				</plugin>
				<plugin>
					<groupId>org.apache.maven.plugins</groupId>
					<artifactId>maven-archetype-plugin</artifactId>
					<version>2.4</version>
				</plugin>
				<plugin>
					<groupId>org.apache.maven.plugins</groupId>
					<artifactId>maven-assembly-plugin</artifactId>
					<version>2.5.5</version>
				</plugin>
				<plugin>
					<groupId>org.apache.maven.plugins</groupId>
					<artifactId>maven-clean-plugin</artifactId>
					<version>2.6.1</version>
				</plugin>
				<plugin>
					<groupId>org.apache.maven.plugins</groupId>
					<artifactId>maven-compiler-plugin</artifactId>
					<version>3.3</version>
					<configuration>
						<source>${java.version}</source>
						<target>${java.version}</target>
					</configuration>
				</plugin>
				<plugin>
					<groupId>org.apache.maven.plugins</groupId>
					<artifactId>maven-dependency-plugin</artifactId>
					<version>2.9</version>
				</plugin>
				<plugin>
					<groupId>org.apache.maven.plugins</groupId>
					<artifactId>maven-deploy-plugin</artifactId>
					<version>2.8.2</version>
				</plugin>
				<plugin>
					<groupId>org.apache.maven.plugins</groupId>
					<artifactId>maven-eclipse-plugin</artifactId>
					<version>2.9</version>
				</plugin>
				<plugin>
					<groupId>org.apache.maven.plugins</groupId>
					<artifactId>maven-install-plugin</artifactId>
					<version>2.5.2</version>
				</plugin>
				<plugin>
					<groupId>org.apache.maven.plugins</groupId>
					<artifactId>maven-jar-plugin</artifactId>
					<version>2.6</version>
				</plugin>
				<plugin>
					<groupId>org.apache.maven.plugins</groupId>
					<artifactId>maven-release-plugin</artifactId>
					<version>2.5.2</version>
					<configuration>
						<preparationGoals>clean install</preparationGoals>
					</configuration>
				</plugin>
				<plugin>
					<groupId>org.apache.maven.plugins</groupId>
					<artifactId>maven-resources-plugin</artifactId>
					<version>2.7</version>
				</plugin>
				<plugin>
					<groupId>org.apache.maven.plugins</groupId>
					<artifactId>maven-site-plugin</artifactId>
					<version>3.4</version>
				</plugin>
				<plugin>
					<groupId>org.apache.maven.plugins</groupId>
					<artifactId>maven-source-plugin</artifactId>
					<version>2.4</version>
				</plugin>
				<plugin>
					<groupId>org.apache.maven.plugins</groupId>
					<artifactId>maven-plugin-plugin</artifactId>
					<version>3.4</version>
				</plugin>
				<plugin>
					<groupId>org.apache.maven.plugins</groupId>
					<artifactId>maven-invoker-plugin</artifactId>
					<version>2.0.0</version>
				</plugin>
				<plugin>
					<groupId>org.apache.maven.plugins</groupId>
					<artifactId>maven-surefire-plugin</artifactId>
					<version>2.9</version>
					<configuration>
						<argLine>-Djava.awt.headless=true -Xmx${project.runtime.heap.max}m
							-XX:MaxPermSize=${project.runtime.perm.heap.max}m</argLine>
					</configuration>
				</plugin>
			</plugins>
		</pluginManagement>
		<plugins>
			<plugin>
				<groupId>org.apache.maven.plugins</groupId>
				<artifactId>maven-source-plugin</artifactId>
				<executions>
					<execution>
						<id>attach-sources</id>
						<goals>
							<goal>jar</goal>
						</goals>
					</execution>
				</executions>
			</plugin>
			<plugin>
				<groupId>org.apache.maven.plugins</groupId>
				<artifactId>maven-clean-plugin</artifactId>
				<configuration>
					<filesets>
						<fileset>
							<directory>cloudera-framework-repo/cloudera-framework-repo-external/src/main/repository</directory>
							<includes>
								<include>**/${project.artifactId}/**</include>
							</includes>
						</fileset>
					</filesets>
				</configuration>
			</plugin>
			<plugin>
				<groupId>org.apache.maven.plugins</groupId>
				<artifactId>maven-install-plugin</artifactId>
				<inherited>false</inherited>
				<executions>
					<execution>
						<id>install-artifact</id>
						<phase>install</phase>
						<goals>
							<goal>install-file</goal>
						</goals>
						<configuration>
							<pomFile>pom.xml</pomFile>
							<file>pom.xml</file>
							<localRepositoryPath>cloudera-framework-repo/cloudera-framework-repo-external/src/main/repository</localRepositoryPath>
						</configuration>
					</execution>
				</executions>
			</plugin>
		</plugins>
	</build>

</project>
